--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <img class="under-oscar" src="./Rectangle 5.svg" alt="">
     </div>
     <div class="cinema">
-        <p>1. Как создают кино</p>
+        <p class="some-width">1. Как создают кино</p>
     </div>
     <div class="september-8">
         <p>8 сентября 20.00 Данила Кузнецов</p>
@@ -213,7 +213,7 @@
         <img class="under-oscar" src="./Rectangle 15.svg" alt="">
     </div>
     <div class="cinema">
-        <p>6. Язык кино. Семинар</p>
+        <p class="some-width">6. Язык кино. Семинар</p>
     </div>
     <div class="september-8">
         <p>20 сентября 13.00 Данила Кузнецов</p>
